Add player badges

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -11,6 +11,26 @@
 
 <div id="content">
 
+    <div id="playerInfo">
+
+        <div id="badgesTop">
+            <img src="../../Resources/Assets/Gym Badges/BW2/1.png" id="badge1" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/2.png" id="badge2" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/3.png" id="badge3" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/4.png" id="badge4" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/Badges Top.png" alt="">
+        </div>
+
+        <div id="badgesBot">
+            <img src="../../Resources/Assets/Gym Badges/BW2/5.png" id="badge5" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/6.png" id="badge6" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/7.png" id="badge7" class="badge" alt="">
+            <img src="../../Resources/Assets/Gym Badges/BW2/8.png" id="badge8" class="badge">
+            <img src="../../Resources/Assets/Gym Badges/BW2/Badges Bot.png" alt="">
+        </div>
+
+    </div>
+
     <div id="botPokes">
 
         <div class="pokeDiv">
