--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -16,6 +16,12 @@
 
   <div id="overlay">
 
+    <div id="topBar">
+      <button id="topBarTeam" class="topBarButton">Team</button>
+      <button id="topBarPlayer" class="topBarButton">Player</button>
+      <button id="topBarSettings" class="topBarButton">Settings</button>
+    </div>
+
     <div id="playerRegion">
 
       <div id=pokeParty>
@@ -142,6 +148,37 @@
 
       </div>
 
+    </div>
+
+    <div id="playerInfoDiv">
+
+      <div id="gymBadges">
+        <button class="gymBadgeButton badgeDisabled" id="badge1">
+          <img src="Assets/Gym Badges/BW2/1.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge2">
+          <img src="Assets/Gym Badges/BW2/2.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge3">
+          <img src="Assets/Gym Badges/BW2/3.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge4">
+          <img src="Assets/Gym Badges/BW2/4.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge5">
+          <img src="Assets/Gym Badges/BW2/5.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge6">
+          <img src="Assets/Gym Badges/BW2/6.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge7">
+          <img src="Assets/Gym Badges/BW2/7.png">
+        </button>
+        <button class="gymBadgeButton badgeDisabled" id="badge8">
+          <img src="Assets/Gym Badges/BW2/8.png">
+        </button>
+      </div>
+  
     </div>
 
     <div id="botRegion">
