Add player stats

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -29,6 +29,25 @@
             <img src="../../Resources/Assets/Gym Badges/BW2/Badges Bot.png" alt="">
         </div>
 
+        <div id="playerStats">
+
+            <div class="stat">
+                <load-svg src="../../Resources/SVGs/Pokeball.svg" id="catchesIcon" class="statIcon"></load-svg>
+                <div class="statNumber" id="catchesNumber"></div>
+            </div>
+
+            <div class="stat">
+                <load-svg src="../../Resources/SVGs/Knife.svg" id="killsIcon" class="statIcon"></load-svg>
+                <div class="statNumber" id="killsNumber"></div>
+            </div>
+
+            <div class="stat">
+                <load-svg src="../../Resources/SVGs/Skull.svg" id="deathsIcon" class="statIcon"></load-svg>
+                <div class="statNumber" id="deathsNumber"></div>
+            </div>
+
+        </div>
+
     </div>
 
     <div id="botPokes">
