--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -178,6 +178,25 @@
           <img src="Assets/Gym Badges/BW2/8.png">
         </button>
       </div>
+
+      <div id="playerStats">
+
+        <div class="statDiv">
+          <div class="statText">Catches</div>
+          <input type="number" id="catchesInput" value="0">
+        </div>
+        
+        <div class="statDiv">
+          <div class="statText">Kills</div>
+          <input type="number" id="killsInput" value="0">
+        </div>
+
+        <div class="statDiv">
+          <div class="statText">Deaths</div>
+          <input type="number" id="deathsInput" value="0">
+        </div>
+
+      </div>
   
     </div>
 
