--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -42,7 +42,9 @@
             <option value="Shiny">Shiny</option>
           </select>
 
-          <input type="checkbox" class="pokeGender">
+          <button class="pokeGenderButton">
+            <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
+          </button>
 
         </div>
 
@@ -62,7 +64,9 @@
             <option value="Shiny">Shiny</option>
           </select>
 
-          <input type="checkbox" class="pokeGender">
+          <button class="pokeGenderButton">
+            <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
+          </button>
 
         </div>
 
@@ -82,7 +86,9 @@
             <option value="Shiny">Shiny</option>
           </select>
           
-          <input type="checkbox" class="pokeGender">
+          <button class="pokeGenderButton">
+            <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
+          </button>
 
         </div>
 
@@ -102,7 +108,9 @@
             <option value="Shiny">Shiny</option>
           </select>
 
-          <input type="checkbox" class="pokeGender">
+          <button class="pokeGenderButton">
+            <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
+          </button>
 
         </div>
 
@@ -122,7 +130,9 @@
             <option value="Shiny">Shiny</option>
           </select>
 
-          <input type="checkbox" class="pokeGender">
+          <button class="pokeGenderButton">
+            <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
+          </button>
 
         </div>
 
@@ -142,7 +152,9 @@
             <option value="Shiny">Shiny</option>
           </select>
 
-          <input type="checkbox" class="pokeGender">
+          <button class="pokeGenderButton">
+            <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
+          </button>
 
         </div>
 
