Update overlay poke style

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -56,11 +56,12 @@
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
-            <img class="pokeBorder" src="Resources/Images/PokeBorder.png">
-            <div class="pokeNick"></div>
-            <div class="pokeSubText">
-                <div class="pokeGender"></div>
-                <div class="pokeSpecies"></div>
+            <div class="pokeTexts">
+                <div class="pokeNick"></div>
+                <div class="pokeSubText">
+                    <div class="pokeGender"></div>
+                    <div class="pokeSpecies"></div>
+                </div>
             </div>
         </div>
 
@@ -68,11 +69,12 @@
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
-            <img class="pokeBorder" src="Resources/Images/PokeBorder.png">
-            <div class="pokeNick"></div>
-            <div class="pokeSubText">
-                <div class="pokeGender"></div>
-                <div class="pokeSpecies"></div>
+            <div class="pokeTexts">
+                <div class="pokeNick"></div>
+                <div class="pokeSubText">
+                    <div class="pokeGender"></div>
+                    <div class="pokeSpecies"></div>
+                </div>
             </div>
         </div>
 
@@ -80,11 +82,12 @@
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
-            <img class="pokeBorder" src="Resources/Images/PokeBorder.png">
-            <div class="pokeNick"></div>
-            <div class="pokeSubText">
-                <div class="pokeGender"></div>
-                <div class="pokeSpecies"></div>
+            <div class="pokeTexts">
+                <div class="pokeNick"></div>
+                <div class="pokeSubText">
+                    <div class="pokeGender"></div>
+                    <div class="pokeSpecies"></div>
+                </div>
             </div>
         </div>
 
@@ -92,11 +95,12 @@
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
-            <img class="pokeBorder" src="Resources/Images/PokeBorder.png">
-            <div class="pokeNick"></div>
-            <div class="pokeSubText">
-                <div class="pokeGender"></div>
-                <div class="pokeSpecies"></div>
+            <div class="pokeTexts">
+                <div class="pokeNick"></div>
+                <div class="pokeSubText">
+                    <div class="pokeGender"></div>
+                    <div class="pokeSpecies"></div>
+                </div>
             </div>
         </div>
 
@@ -104,11 +108,12 @@
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
-            <img class="pokeBorder" src="Resources/Images/PokeBorder.png">
-            <div class="pokeNick"></div>
-            <div class="pokeSubText">
-                <div class="pokeGender"></div>
-                <div class="pokeSpecies"></div>
+            <div class="pokeTexts">
+                <div class="pokeNick"></div>
+                <div class="pokeSubText">
+                    <div class="pokeGender"></div>
+                    <div class="pokeSpecies"></div>
+                </div>
             </div>
         </div>
 
@@ -116,11 +121,12 @@
             <div class="pokeImgDiv">
                 <img class="pokeImg">
             </div>
-            <img class="pokeBorder" src="Resources/Images/PokeBorder.png">
-            <div class="pokeNick"></div>
-            <div class="pokeSubText">
-                <div class="pokeGender"></div>
-                <div class="pokeSpecies"></div>
+            <div class="pokeTexts">
+                <div class="pokeNick"></div>
+                <div class="pokeSubText">
+                    <div class="pokeGender"></div>
+                    <div class="pokeSpecies"></div>
+                </div>
             </div>
         </div>
 
