--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -57,6 +57,10 @@
                 <img class="pokeImg">
             </div>
             <div class="pokeTexts">
+                <div class="pokeLvlDiv">
+                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlNum"></div>
+                </div>
                 <div class="pokeNick"></div>
                 <div class="pokeSubText">
                     <div class="pokeGender"></div>
@@ -70,6 +74,10 @@
                 <img class="pokeImg">
             </div>
             <div class="pokeTexts">
+                <div class="pokeLvlDiv">
+                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlNum"></div>
+                </div>
                 <div class="pokeNick"></div>
                 <div class="pokeSubText">
                     <div class="pokeGender"></div>
@@ -83,6 +91,10 @@
                 <img class="pokeImg">
             </div>
             <div class="pokeTexts">
+                <div class="pokeLvlDiv">
+                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlNum"></div>
+                </div>
                 <div class="pokeNick"></div>
                 <div class="pokeSubText">
                     <div class="pokeGender"></div>
@@ -96,6 +108,10 @@
                 <img class="pokeImg">
             </div>
             <div class="pokeTexts">
+                <div class="pokeLvlDiv">
+                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlNum"></div>
+                </div>
                 <div class="pokeNick"></div>
                 <div class="pokeSubText">
                     <div class="pokeGender"></div>
@@ -109,6 +125,10 @@
                 <img class="pokeImg">
             </div>
             <div class="pokeTexts">
+                <div class="pokeLvlDiv">
+                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlNum"></div>
+                </div>
                 <div class="pokeNick"></div>
                 <div class="pokeSubText">
                     <div class="pokeGender"></div>
@@ -122,6 +142,10 @@
                 <img class="pokeImg">
             </div>
             <div class="pokeTexts">
+                <div class="pokeLvlDiv">
+                    <div class="pokeLvlText">Lv. </div>
+                    <div class="pokeLvlNum"></div>
+                </div>
                 <div class="pokeNick"></div>
                 <div class="pokeSubText">
                     <div class="pokeGender"></div>
