Add @pkmn libraries, pokemon type support

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -7,6 +7,8 @@
   <title>Pokemon Stream Tool</title>
   <link rel="stylesheet" href="CSS/GUI.css">
   <script src="Scripts/GUI/mousetrap.min.js" defer></script>
+  <script src="Scripts/GUI/@pkmn/dex.js" defer></script>
+  <script src="Scripts/GUI/@pkmn/data.js" defer></script>
   <script src="Scripts/GUI.js" type="module"></script>
 </head>
   
@@ -60,6 +62,11 @@
             <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
           </button>
 
+          <div class="pokeTypeDiv">
+            <img alt="" class="typeIcon typeIcon1">
+            <img alt="" class="typeIcon typeIcon2">
+          </div>
+
         </div>
 
         <div class="pokemonDiv">
@@ -87,6 +94,11 @@
             <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
           </button>
 
+          <div class="pokeTypeDiv">
+            <img alt="" class="typeIcon typeIcon1">
+            <img alt="" class="typeIcon typeIcon2">
+          </div>
+
         </div>
 
         <div class="pokemonDiv">
@@ -114,6 +126,11 @@
             <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
           </button>
 
+          <div class="pokeTypeDiv">
+            <img alt="" class="typeIcon typeIcon1">
+            <img alt="" class="typeIcon typeIcon2">
+          </div>
+
         </div>
 
         <div class="pokemonDiv">
@@ -141,6 +158,11 @@
             <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
           </button>
 
+          <div class="pokeTypeDiv">
+            <img alt="" class="typeIcon typeIcon1">
+            <img alt="" class="typeIcon typeIcon2">
+          </div>
+
         </div>
 
         <div class="pokemonDiv">
@@ -167,6 +189,11 @@
           <button class="pokeGenderButton">
             <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
           </button>
+
+          <div class="pokeTypeDiv">
+            <img alt="" class="typeIcon typeIcon1">
+            <img alt="" class="typeIcon typeIcon2">
+          </div>
 
         </div>
 
@@ -194,6 +221,11 @@
           <button class="pokeGenderButton">
             <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
           </button>
+
+          <div class="pokeTypeDiv">
+            <img alt="" class="typeIcon typeIcon1">
+            <img alt="" class="typeIcon typeIcon2">
+          </div>
 
         </div>
 
