Type color now decided by overlay

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RoA VS Screen</title>
-    <script src="Resources/PBW2.js" defer></script>
+    <title>Poke BnW Overlay</title>
+    <script src="Resources/PBW2.js" type="module"></script>
     <link rel="stylesheet" href="Resources/PBW2.css">
 </head>
 
