Use Showdown sprites + replace some Pokémon names

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -9,6 +9,7 @@
   <script src="Scripts/GUI/mousetrap.min.js" defer></script>
   <script src="Scripts/GUI/@pkmn/dex.js" defer></script>
   <script src="Scripts/GUI/@pkmn/data.js" defer></script>
+  <script src="Scripts/GUI/@pkmn/img.js" defer></script>
   <script src="Scripts/GUI.js" type="module"></script>
 </head>
   
