Add generation select

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -309,6 +309,27 @@
     <div id="settingsRegion" class="region">
     
         <div id="settingsList">
+
+          <div>
+
+            <div class="settingsTitle">General Settings</div>
+
+            <div id="gameSelectDiv" class="settingBox" title="Changes the current pokedex data">
+              <div>Game select</div>
+              <select id="gameSelect">
+                <option value="1">1 - Red/Blue</option>
+                <option value="2">2 - Gold/Silver</option>
+                <option value="3">3 - Ruby/Saphire</option>
+                <option value="4">4 - Pearl/Diamond</option>
+                <option value="5">5 - Black/White</option>
+                <option value="6">6 - X/Y</option>
+                <option value="7">7 - Sun/Moon</option>
+                <option value="8">8 - Sword/Shield</option>
+                <option value="9">9 - Scarlet/Violet</option>
+              </select>
+            </div>
+
+          </div>
   
           <div id="settingsElectron">
   
