Generate default data if no json files found

--- a/Interface Source Code/failed.html
+++ b/Interface Source Code/failed.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Path error</h1>
 
-    <p>Couldn't find either "Resources/GUI/Texts/GUI Settings.json" or the Resources folder itself.</p>
+    <p>Couldn't find the Resources folder.</p>
     <p>Make sure the Resources folder is next to the executable.</p>
 </body>
 </html>
