--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -51,7 +51,7 @@
 
           <div class="pokeLvlDiv" title="Pokemon level">
             <div class="pokeLvlText">Lv.</div>
-            <input class="pokeLvlNumber" type="number" min="1" max="100">
+            <input class="pokeLvlNumber" type="number" min="1" max="100" value="1">
           </div>          
 
           <select class="pokeForm" title="For pokemons that have different forms">
@@ -85,7 +85,7 @@
 
           <div class="pokeLvlDiv" title="Pokemon level">
             <div class="pokeLvlText">Lv.</div>
-            <input class="pokeLvlNumber" type="number" min="1" max="100">
+            <input class="pokeLvlNumber" type="number" min="1" max="100" value="1">
           </div>          
 
           <select class="pokeForm" title="For pokemons that have different forms">
@@ -119,7 +119,7 @@
 
           <div class="pokeLvlDiv" title="Pokemon level">
             <div class="pokeLvlText">Lv.</div>
-            <input class="pokeLvlNumber" type="number" min="1" max="100">
+            <input class="pokeLvlNumber" type="number" min="1" max="100" value="1">
           </div>          
 
           <select class="pokeForm" title="For pokemons that have different forms">
@@ -153,7 +153,7 @@
 
           <div class="pokeLvlDiv" title="Pokemon level">
             <div class="pokeLvlText">Lv.</div>
-            <input class="pokeLvlNumber" type="number" min="1" max="100">
+            <input class="pokeLvlNumber" type="number" min="1" max="100" value="1">
           </div>          
 
           <select class="pokeForm" title="For pokemons that have different forms">
@@ -187,7 +187,7 @@
 
           <div class="pokeLvlDiv" title="Pokemon level">
             <div class="pokeLvlText">Lv.</div>
-            <input class="pokeLvlNumber" type="number" min="1" max="100">
+            <input class="pokeLvlNumber" type="number" min="1" max="100" value="1">
           </div>          
 
           <select class="pokeForm" title="For pokemons that have different forms">
@@ -221,7 +221,7 @@
 
           <div class="pokeLvlDiv" title="Pokemon level">
             <div class="pokeLvlText">Lv.</div>
-            <input class="pokeLvlNumber" type="number" min="1" max="100">
+            <input class="pokeLvlNumber" type="number" min="1" max="100" value="1">
           </div>          
 
           <select class="pokeForm" title="For pokemons that have different forms">
