Add intro countdown and reveal progress bar

--- a/Stream Tool/Overlays/Stream Intro/Intro.html
+++ b/Stream Tool/Overlays/Stream Intro/Intro.html
@@ -13,7 +13,13 @@
 
     <div id="whoThatDiv">
 
-        <div id="whoThatTitle">Who's that Pokemon?</div>
+        <div id="whoThatTitleDiv">
+            <div id="whoThatTitle">Who's that Pokemon?</div>
+            <div id="whoThatBarDiv">
+                <div id="whoThatRevealBarBg" class="whoThatBar"></div>
+                <div id="whoThatRevealProgress" class="whoThatBar"></div>
+            </div>
+        </div>
         <div id="whoThatContent">
 
             <div id="pokeImgContainer">
@@ -34,7 +40,10 @@
     <div id="countdownDiv">
 
         <div id="countdownBg"></div>
-        <!-- <div class="countdownBg" id="countdownBg2"></div> -->
+        <div id="countdownTextDiv">
+            <div class="countdownText">El stream comienza</div>
+            <div class="countdownText" id="countdownNumber">en 3:14</div>
+        </div>        
 
     </div>
 
