Some intro fixes

--- a/Stream Tool/Overlays/Stream Intro/Intro.html
+++ b/Stream Tool/Overlays/Stream Intro/Intro.html
@@ -41,8 +41,7 @@
 
         <div id="countdownBg"></div>
         <div id="countdownTextDiv">
-            <div class="countdownText">El stream comienza</div>
-            <div class="countdownText" id="countdownNumber">en 3:14</div>
+            <div id="countdownText">en 3:14</div>
         </div>        
 
     </div>
