Add wild encounters to Overlay

--- a/Stream Tool/Overlays/Black and White/PBWOverlay.html
+++ b/Stream Tool/Overlays/Black and White/PBWOverlay.html
@@ -50,6 +50,99 @@
 
     </div>
 
+    <div id="wildEncounterDiv">
+
+        <div class="pokeImgDiv" id="wildPokeImgDiv">
+            <img class="pokeImg" id="wildPokeImg">
+        </div>
+
+        <div id="wildBackground"></div>
+
+        <div id="wildInfoDiv">
+
+            <div class="vsWildPokeTypeDiv">
+                <div class="vsWildTypeDiv">
+                  <img alt="" class="typeIcon">
+                  <span></span>
+                </div>
+                <div class="vsWildTypeDiv">
+                  <img alt="" class="typeIcon">
+                  <span></span>
+                </div>
+              </div>
+  
+              <div id="vsWildGenderRatio">
+  
+                <div class="vsWildGenderRatioDiv">
+                  <img class="pokeGenderIcon" src="../../Resources/Assets/Gender M.png" alt="">
+                  <span class="vsWildGenderRatioText" id="vsWildGenderRatioM"></span>
+                </div>
+  
+                <div class="vsWildGenderRatioDiv">
+                  <img class="pokeGenderIcon" src="../../Resources/Assets/Gender F.png" alt="">
+                  <span class="vsWildGenderRatioText" id="vsWildGenderRatioF"></span>
+                </div>
+  
+              </div>
+  
+              <div id="vsWildAbilities">
+  
+                <div class="vsWildAbilityText" id="vsWildAbility0"></div>
+                <div class="vsWildAbilityText" id="vsWildAbility1"></div>
+                <div class="vsWildAbilityText" id="vsWildAbilityH"></div>
+  
+              </div>
+
+        </div>
+
+        <div id="vsWildStatsDiv">
+
+            <div class="vsWildStat" id="vsWildStatHP">
+              <div class="vsWildStatName vsWildStatText">HP</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberHP"></div>
+              <div class="vsWildMeter" id="vsWildMeterHP"></div>
+            </div>
+  
+            <div class="vsWildStat" id="vsWildStatAT">
+              <div class="vsWildStatName vsWildStatText">Attack</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberAT"></div>
+              <div class="vsWildMeter" id="vsWildMeterAT"></div>
+            </div>
+  
+            <div class="vsWildStat" id="vsWildStatDE">
+              <div class="vsWildStatName vsWildStatText">Defense</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberDE"></div>
+              <div class="vsWildMeter" id="vsWildMeterDE"></div>
+            </div>
+  
+            <div class="vsWildStat" id="vsWildStatSA">
+              <div class="vsWildStatName vsWildStatText">Sp. Attack</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSA"></div>
+              <div class="vsWildMeter" id="vsWildMeterSA"></div>
+            </div>
+  
+            <div class="vsWildStat" id="vsWildStatSD">
+              <div class="vsWildStatName vsWildStatText">Sp. Defense</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSD"></div>
+              <div class="vsWildMeter" id="vsWildMeterSD"></div>
+            </div>
+  
+            <div class="vsWildStat" id="vsWildStatSP">
+              <div class="vsWildStatName vsWildStatText">Speed</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberSP"></div>
+              <div class="vsWildMeter" id="vsWildMeterSP"></div>
+            </div>
+  
+            <div class="vsWildStat" id="vsWildStatTS">
+              <div class="vsWildStatName vsWildStatText">Total</div>
+              <div class="vsWildStatNumber vsWildStatText" id="vsWildStatNumberTS"></div>
+              <div class="vsWildMeter" id="vsWildMeterTS"></div>
+            </div>
+  
+          </div>
+
+    </div>
+
     <div id="botPokes">
 
         <div class="pokeDiv">
