--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -207,7 +207,7 @@
               </div>
             </div>
 
-            <div id="vsWildGenderRatio">
+            <div id="vsWildGenderRatio" title="Gender Ratio">
 
               <div class="vsWildGenderRatioDiv">
                 <img class="pokeGenderIcon" src="Assets/Gender M.png" alt="">
@@ -223,9 +223,9 @@
 
             <div id="vsWildAbilities">
 
-              <div class="vsWildAbilityText" id="vsWildAbility0"></div>
-              <div class="vsWildAbilityText" id="vsWildAbility1"></div>
-              <div class="vsWildAbilityText" id="vsWildAbilityH"></div>
+              <div class="vsWildAbilityText" id="vsWildAbility0" title="Ability 1"></div>
+              <div class="vsWildAbilityText" id="vsWildAbility1" title="Ability 2"></div>
+              <div class="vsWildAbilityText" id="vsWildAbilityH" title="Hidden Ability"></div>
 
             </div>
 
