Citra memory reading proof of concept

--- a/Stream Tool/Resources/GUI.html
+++ b/Stream Tool/Resources/GUI.html
@@ -309,6 +309,12 @@
                   Restore default dimensions
                 </button>
               </div>
+
+              <div id="settingsButtonSection">
+                <button class="settingsButton" id="citraButt" tabindex="-1">
+                  Citra moment
+                </button>
+              </div>
     
             </div>
     
