Add game select support

--- a/Stream Tool/Overlays/X and Y/XY Overlay.html
+++ b/Stream Tool/Overlays/X and Y/XY Overlay.html
@@ -25,39 +25,39 @@
 
             <div id="badgesTop">
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/1.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/1 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/1.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/1 Empty.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/2.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/2 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/2.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/2 Empty.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/3.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/3 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/3.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/3 Empty.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/4.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/4 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/4.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/4 Empty.png" class="emptyBadge" alt="">
                 </div>
             </div>
     
             <div id="badgesBot">
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/5.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/5 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/5.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/5 Empty.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/6.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/6 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/6.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/6 Empty.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/7.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/7 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/7.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/7 Empty.png" class="emptyBadge" alt="">
                 </div>
                 <div class="badgeDiv">
-                    <img src="../../Resources/Assets/Gym Badges/XY/8.png" id="badge1" class="badge" alt="">
-                    <img src="../../Resources/Assets/Gym Badges/XY/8 Empty.png" class="emptyBadge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/8.png" id="badge1" class="badge" alt="">
+                    <img src="../../Resources/Assets/Gym Badges/6/XY/8 Empty.png" class="emptyBadge" alt="">
                 </div>
             </div>
 
